[gd_scene load_steps=16 format=2]

[ext_resource path="res://Enemy/blob_purple.png" type="Texture" id=1]
[ext_resource path="res://Shadow/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://OverlapBox/EnemyHurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/Blob.gd" type="Script" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://OverlapBox/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://OverlapBox/SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://OverlapBox/Hitbox.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Move",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 2.88615
height = 7.15031

[sub_resource type="CircleShape2D" id=5]
radius = 7.98513

[sub_resource type="CircleShape2D" id=6]
radius = 942.536

[sub_resource type="CircleShape2D" id=7]
radius = 3.61695

[node name="Blob" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 4 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 1

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 7.14761 )
scale = Vector2( 1.3784, 1 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 3 )
animation = "Move"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4.4147 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="EnemyHurtbox" parent="." instance=ExtResource( 3 )]
monitoring = false
monitorable = false
collision_layer = 16

[node name="CollisionShape2D" parent="EnemyHurtbox" index="0"]
shape = SubResource( 5 )

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
shape = SubResource( 6 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]
visible = false

[node name="Hitbox" parent="." instance=ExtResource( 8 )]
monitorable = false
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="EnemyHurtbox" to="." method="_on_EnemyHurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="EnemyHurtbox"]

[editable path="PlayerDetection"]

[editable path="Hitbox"]
